# branham-chat

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  api.md  index.css  index.js  messages.sqlite  package-lock.json  package.json  public.env
.parcel-cache/: 1b3c8d2d1e86c95d  1dab1b8374476f9a  1e610f85a7531055.txt  1f4dacbf6f1f76f1  25dbab33e438dbd8  269060a6ed936153  2fc3881870e9181d  3d3286644440e5dd  54b667a977ea221f.txt  69b065fc9139136b  6f60a7e6da21602e  8cb082f23df1bb50.txt  8e58b2583899ccc9  8e5f36d490449f42  955b97da79f98971.txt  b141ac2c6cdf8bb8  b79d59992aa9e06b  bff53b857411b274  c0d786b5ece71406  d162799fc1fd3b24  d20c62994b226408  e734410192e19c36  f33e4bce2c2c3bd3  f6738967db7da976  lock.mdb
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  Login.css  Login.js  constants.js  index.css  index.html
client/src/api/: requests.js
db/: index.js
db/data/: messages.db
public/: index.css  index.html  index.js
server/: .gitignore  Cargo.toml  branham-chat.toml  branham-chat.toml.example  index.js  package-lock.json  package.json
server/chat/: handleMessage.js
server/src/: annotated.rs  index.js  main.rs  oauth.rs
server/src/actors/: client.rs  server.rs
server/src/config/: bindable.rs  mod.rs
server/src/data/: mod.rs  timestamp.rs  token.rs
server/src/db/: mod.rs
server/src/routes/: helpers.rs  mod.rs
server/src/verification/: verify_google_token.js
src/: db.js  index.js
src/verification/: verify_google_token.js  verify_session_token.js
