[package]
name = "branham-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
awc = { version = "3", features = ["rustls"] }
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
log = "0.4"
rand = "0.8"
rusqlite = "0.27"
simple_logger = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
